@@ -1,3 +1,10 @@
+2002-09-13  Braden McDaniel  <braden@endoframe.com>
+
+        * src/openvrml/OpenVRML/node.cpp,
+          src/openvrml/OpenVRML/node.h: Fixed a bug in
+          Node::resetVisitedFlag that would cause a crash for several
+          node types. Added nothrow exception spec to the method.
+
 2002-09-10  Thomas Flynn  <tflynn@users.sourceforge.net>
 
         * doc/conformance.html: Retest Anchor, Inline and most of PROTO.
